scripts/nullness/original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8.txt
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/SET_ArrayPlace.java:12: error: [initialization.fields.uninitialized] the constructor does not initialize fields: expression
	private SET_ArrayPlace(ArrayPlace...arrayPlaces) {
	        ^
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/FOR.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: from, to
	private FOR(NumericVariable variable) {
	        ^
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/IF.java:9: error: [assignment] incompatible types in assignment.
	private Integer lineNumber = null;
	                             ^
  found   : null (NullType)
  required: @Initialized @NonNull Integer
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:31: error: [unboxing.of.nullable] unboxing a possibly-null reference HPBasicProgram.maxValueForLoopVariable.get(varName)
		int maximalValue = HPBasicProgram.maxValueForLoopVariable.get(varName);
		                                                             ^
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:34: error: [assignment] incompatible types in assignment.
			HPBasicProgram.nextLineNumber = HPBasicProgram.lineNumberForLoopVariable.get(varName);
			                                                                            ^
  found   : @Initialized @Nullable Integer
  required: @Initialized @NonNull Integer
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/REPLACE.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: expression
	private REPLACE(StringVariable variable, NumericExpression from, NumericExpression to) {
	        ^
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/HPBasicProgram.java:11: error: [initialization.static.field.uninitialized] static field currentLineNumber not initialized
	public static Integer currentLineNumber;
	                      ^
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/HPBasicProgram.java:12: error: [initialization.static.field.uninitialized] static field nextLineNumber not initialized
	public static Integer nextLineNumber;
	                      ^
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/NumericVariable.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: value
	public NumericVariable(String name) {
	       ^
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/FunctionVariable.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: body
	public FunctionVariable(String name) {
	       ^
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/ProgramLines.java:29: error: [return] incompatible types in return.
		return lines.get(lineNumber);
		                ^
  type of expression: @Initialized @Nullable Statement
  method return type: @Initialized @NonNull Statement
../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/ProgramLines.java:32: error: [return] incompatible types in return.
		return lines.higherKey(lineNumber);
		                      ^
  type of expression: @Initialized @Nullable Integer
  method return type: @Initialized @NonNull Integer
Note: ../original/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/functions/TIM.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
12 errors
